# gunlinuxbot

./: .gitignore  Dockerfile  Makefile  README.md  app.py  beer_consumer.py  conftest.py  doc.md  docker-compose.yml  donats.py  donats_getter.py  donats_worker.py  event.py  local_events.py  obs.md  obs.py  plan.md  pyproject.toml  pyrightconfig.json  pytest.ini  queue_stat.py  realapp.py  req.txt  retwitch_getter.py  retwitch_sender.py  retwitch_worker.py  setup.cfg  twitch_cli.py  twitch_getter.py  twitch_mssg.py  twitch_sender.py  twitch_worker.py  twitchbot.py
.github/: deploy.sh
.github/workflows/: deploy.yml
commander/: __init__.py  commands.py
commands/: readme.txt
donats/: donats.py  handlers.py  models.py  schemas.py
go_services/ws_service/: go.mod  go.sum  main.go
gunlinuxbot/: handlers.py  myqueue.py  sender.py  utils.py
gunlinuxbot/donats/: donats.py
gunlinuxbot/models/: command.py  donats.py  event.py  myqueue.py  twitch.py
gunlinuxbot/schemas/: donats.py  myqueue.py  queue.py  twitch.py
gunlinuxbot/twitch/: twitchbot.py
local_events/: commands.py.example  null.sh
local_events/scripts/: cancel.py  mouseoff_task_twitch.py  shutdown.py  task_example.py
models/: command.py  events.py  mssg.py  user.py
requeue/: requeue.py  rredis.py
retwitch/: bot.py  cli.py  handlers.py  models.py  reqs.py  schemas.py  token.py
sender/: sender.py
services/: local_events.service
tests/data/: da_events.json
tests/units/: test_donats.py  test_donats_api.py  test_events.py  (+6 more)
twitch/: handlers.py  models.py  schemas.py  sender.py  twitch_getter.py  twitch_sender.py  twitch_worker.py  twitchbot.py
(+5 files in other folders)
